# dotfiles

./: .gitignore  .gitmodules  Preferences.sublime-settings  README.md  Xresources  aliases  aliases-darwin  aliases-linux  bundles.vim  gdbinit  gitconfig  gitignore  install  install.conf.yaml  mac_dock.sh  macos  private-default  re.faro.togglewifi.plist  tmux.conf  uninstall  update  vimrc  xinitrc  xmodmaprc  zshenv  zshenv-darwin  zshenv-linux  zshrc  zshrc-darwin  zshrc-linux
Xresources.d/: redphoenix  urxvt
templates/: CMakeLists.txt  editorconfig  iptables.sh
templates/ansible/: create_vm.ps1
templates/ansible/playbooks/: complete-setup.yml  initial-setup.yml  site.yml
templates/ansible/playbooks/group_vars/: all
templates/ansible/playbooks/roles/common/handlers/: main.yml
templates/bash/: main.sh
templates/bash/lib/: color.shinc  debug.shinc  error.shinc  print.shinc  require_root.shinc  stdlib.sh  stdlib.shinc  string.shinc  task.shinc
templates/bash/shinc/: color.shinc  prog.shinc  require_root.shinc  stdlib.shinc  string.shinc  util.shinc
templates/bpf/: Makefile
templates/c/: CMakeLists.txt  Doxyfile  Makefile  config.mk
templates/c/include/: util.h
templates/c/mk/: signature
templates/c/src/: main.c  strlcat.c  strlcpy.c
templates/cpp/: .editorconfig  CMakeLists.txt
templates/cpp/src/: main.cpp
templates/cproj/: Makefile  Vagrantfile
templates/docker/: Dockerfile
templates/iptables/: iptables.sh
templates/latex/: Makefile  article_template.tex  assignment_template.tex  beamer_template.tex
templates/makefile/: Makefile
templates/python/: .gitignore  gendist.sh  pyproject.toml
templates/rust/: Cargo.toml  cargo-generate.toml
templates/rust/src/: config.rs  main.rs
templates/vagrant/: Vagrantfile
(+124 files in other folders)
